# python-project-50

./: .coverage  .gitignore  Makefile  README.md  const.py  coverage.xml  pyproject.toml
.github/workflows/: Python CI.yml
gendiff/: __init__.py  const.py  find_diff.py  formatter.py  generate_diff.py  utils.py
gendiff/cli/: cli.py
gendiff/diff_builder/: find_diff.py  generate_diff.py
gendiff/formated/: formatted_json.py  formatted_methods.py  formatted_plain.py  formatter_plain.py  formatter_simple.py  formatter_stylish.py
gendiff/scripts/: __init__.py  gendiff.py  generate_diff.py
tests/: test_generate_diff.py  test_main_gendiff.py
tests/fixtures/: expected_diff_empty.txt  expected_diff_identical1_plain.txt  expected_diff_identical2_plain.txt  expected_diff_main_plain.txt  expected_main_gendiff_help.txt
tests/fixtures/JSON/Expected/: expected_diff_identical1_json.txt  expected_diff_identical2_json.txt  expected_diff_main_json.txt
tests/fixtures/Json/Expected/: expected_diff_empty_json.txt
tests/fixtures/Plain/Expected/: expected_diff_identical1_plain.txt  expected_diff_identical2_plain.txt
tests/fixtures/Simple/Expected/: expected_diff_empty_simple.txt  expected_diff_identical1_simple.txt  expected_diff_identical2_simple.txt
tests/fixtures/Simple/YAML/: simple_file_2.yaml
